NV HPC SDK, new makefiles,Jupyter revamps

--- a/hpc/miniprofiler/English/C/source_code/lab1/Makefile
+++ b/hpc/miniprofiler/English/C/source_code/lab1/Makefile
@@ -1,11 +1,10 @@
 CC := pgc++
 CFLAGS := -O3 -w
 ACCFLAGS := -Minfo=accel
-LDFLAGS :=  -lnetcdf -ldl
 NVTXLIB := -I/opt/pgi/linux86-64-llvm/2019/cuda/10.1/include/
 
 miniWeather: miniWeather_serial.cpp
-	${CC} ${CFLAGS} ${ACCFLAGS} -o miniWeather miniWeather_serial.cpp ${NVTXLIB} ${LDFLAGS}
+	${CC} ${CFLAGS} ${ACCFLAGS} -o miniWeather miniWeather_serial.cpp ${NVTXLIB} 
 
 clean:
 	rm -f *.o miniWeather
