--- a/hpc/miniprofiler/English/Fortran/source_code/lab5/Makefile
+++ b/hpc/miniprofiler/English/Fortran/source_code/lab5/Makefile
@@ -1,6 +1,6 @@
 FC := pgf90
 FFLAGS := -fast
-LDFLAGS := -lnvToolsExt -lnetcdff
+LDFLAGS := -lnvToolsExt 
 ACCFLAGS := -ta=tesla:managed -Minfo=accel
 NVTXINC := -I/opt/pgi/linux86-64-llvm/2019/cuda/10.1/include/
 NVTXLIB := -L/opt/pgi/linux86-64-llvm/2019/cuda/10.0/lib64/
