--- a/hpc/openacc/English/Fortran/source_code/lab3/Makefile
+++ b/hpc/openacc/English/Fortran/source_code/lab3/Makefile
@@ -1,6 +1,6 @@
 
 FC := pgfortran
-ACCFLAGS:= -fast -ta=tesla:cc70 -Minfo=accel
+ACCFLAGS:= -fast -ta=tesla -Minfo=accel
 
 laplace: laplace2d.f90 jacobi.f90
 	${FC} ${ACCFLAGS} -o laplace laplace2d.f90 jacobi.f90
