--- a/hpc/miniprofiler/English/C/source_code/solutions/Makefile
+++ b/hpc/miniprofiler/English/C/source_code/solutions/Makefile
@@ -1,10 +1,9 @@
 CC := pgc++
 CFLAGS := -O3 -w
 ACCFLAGS := -ta=tesla:managed -Minfo=accel
-LDFLAGS := -lnetcdf
 
 miniWeather: miniWeather_openacc.cpp
-	${CC} ${CFLAGS} ${ACCFLAGS} -o miniWeather miniWeather_openacc.cpp ${LDFLAGS}
+	${CC} ${CFLAGS} ${ACCFLAGS} -o miniWeather miniWeather_openacc.cpp 
 
 clean:
 	rm -f *.o miniWeather
