--- a/hpc/miniprofiler/English/Fortran/source_code/lab1/Makefile
+++ b/hpc/miniprofiler/English/Fortran/source_code/lab1/Makefile
@@ -1,7 +1,7 @@
 FC := pgf90
 FCC := pgfortran
 FFLAGS := -fast
-LDFLAGS := -lnvToolsExt -lnetcdff
+LDFLAGS := -lnvToolsExt 
 ACCFLAGS := -Minfo=accel
 NVTXINC := -I/opt/pgi/linux86-64-llvm/2019/cuda/10.1/include/
 NVTXLIB := -L/opt/pgi/linux86-64-llvm/2019/cuda/10.0/lib64/
