--- a/hpc/openacc/English/C/source_code/lab1/solutions/Makefile
+++ b/hpc/openacc/English/C/source_code/lab1/solutions/Makefile
@@ -2,7 +2,7 @@
 CC := pgcc
 ACCFLAGS_1 := -fast
 ACCFLAGS_2 := -fast -ta=multicore -Minfo=accel
-ACCFLAGS_3 := -fast -ta=tesla,managed -Minfo=accel
+ACCFLAGS_3 := -fast -ta=tesla:managed -Minfo=accel
 
 laplace_serial: jacobi.c laplace2d.c
 	${CC} ${ACCFLAGS_1} -o laplace jacobi.c laplace2d.c
