--- a/hpc/openacc/English/Fortran/source_code/lab1/solutions/Makefile
+++ b/hpc/openacc/English/Fortran/source_code/lab1/solutions/Makefile
@@ -2,7 +2,7 @@
 FC := pgfortran
 ACCFLAGS_1 := -fast
 ACCFLAGS_2 := -fast -ta=multicore -Minfo=accel
-ACCFLAGS_3 := -fast -ta=tesla,managed -Minfo=accel
+ACCFLAGS_3 := -fast -ta=tesla:managed -Minfo=accel
 
 laplace_serial: laplace2d.f90 jacobi.f90 
 	${FC} ${ACCFLAGS_1} -o laplace laplace2d.f90 jacobi.f90
