--- a/hpc/openacc/Dockerfile
+++ b/hpc/openacc/Dockerfile
@@ -1,14 +1,15 @@
 
-# To run this dockerfile you need to present port 8888 and provide a hostname. 
-# For instance:
-#   $ nvidia-docker run --rm -it -p "8888:8888" -e HOSTNAME=foo.example.com openacc-labs:latest
+# To build the docker container, run: $ sudo docker build -t openacc-labs:latest .
+# To run: $ sudo docker run --rm -it --gpus=all -p 8888:8888 openacc-labs:latest
+# Finally, open http://127.0.0.1:8888/
+
 FROM nvcr.io/hpc/pgi-compilers:ce
 
 RUN apt update && \
     apt install -y --no-install-recommends python3-pip python3-setuptools nginx zip build-essential && \
     rm -rf /var/lib/apt/lists/* && \
     pip3 install --no-cache-dir jupyter
-ADD docker-configs/default /etc/nginx/sites-available/default
+
 
 ADD English/ /labs
 WORKDIR /labs
