--- a/hpc/miniprofiler/English/C/source_code/lab1/Makefile
+++ b/hpc/miniprofiler/English/C/source_code/lab1/Makefile
@@ -1,5 +1,5 @@
 CC := pgc++
-CFLAGS := -O3 -w
+CFLAGS := -O3 -w -ldl
 ACCFLAGS := -Minfo=accel
 NVTXLIB := -I/opt/pgi/linux86-64-llvm/2019/cuda/10.1/include/
 
