--- a/hpc/openacc/English/Fortran/source_code/lab2/Makefile
+++ b/hpc/openacc/English/Fortran/source_code/lab2/Makefile
@@ -1,4 +1,4 @@
-
+# Copyright (c) 2020 NVIDIA Corporation.  All rights reserved. 
 FC := pgfortran
 ACCFLAGS_1 := -fast -ta=tesla -Minfo=accel
 ACCFLAGS_2 := -fast -ta=tesla:managed -Minfo=accel
