--- a/hpc/miniprofiler/English/C/source_code/lab3/Makefile
+++ b/hpc/miniprofiler/English/C/source_code/lab3/Makefile
@@ -1,3 +1,5 @@
+# Copyright (c) 2020 NVIDIA Corporation.  All rights reserved. 
+
 CC := pgc++
 CFLAGS := -O3 -w
 ACCFLAGS := -ta=tesla:managed -Minfo=accel
