--- a/hpc/openacc/English/Fortran/source_code/lab1/Makefile
+++ b/hpc/openacc/English/Fortran/source_code/lab1/Makefile
@@ -1,4 +1,4 @@
-
+# Copyright (c) 2020 NVIDIA Corporation.  All rights reserved. 
 FC := pgfortran
 ACCFLAGS_1 := -fast
 ACCFLAGS_2 := -fast -ta=multicore -Minfo=accel
