--- a/hpc/miniprofiler/English/Fortran/source_code/lab1/Makefile
+++ b/hpc/miniprofiler/English/Fortran/source_code/lab1/Makefile
@@ -4,8 +4,8 @@ FCC := pgfortran
 FFLAGS := -fast
 LDFLAGS := -lnvToolsExt 
 ACCFLAGS := -Minfo=accel
-NVTXINC := -I/opt/pgi/linux86-64-llvm/2019/cuda/10.1/include/
-NVTXLIB := -L/opt/pgi/linux86-64-llvm/2019/cuda/10.0/lib64/
+NVTXINC := -I/opt/nvidia/hpc_sdk/Linux_x86_64/20.9/cuda/11.0/include
+NVTXLIB := -L/opt/nvidia/hpc_sdk/Linux_x86_64/20.9/cuda/11.0/lib64/
 
 miniWeather: nvtx.f90 miniWeather_serial.f90
 	$(FC) $(FFLAGS) $(ACCFLAGS) $(NVTXINC) nvtx.f90 miniWeather_serial.f90 -o miniWeather $(NVTXLIB) $(LDFLAGS)
