--- a/hpc/openacc/Dockerfile
+++ b/hpc/openacc/Dockerfile
@@ -4,10 +4,10 @@
 # To run: $ sudo docker run --rm -it --gpus=all -p 8888:8888 openacc-labs:latest
 # Finally, open http://127.0.0.1:8888/
 
-FROM nvcr.io/hpc/pgi-compilers:ce
+FROM nvcr.io/nvidia/nvhpc:20.9-devel-ubuntu20.04
 
-RUN apt update && \
-    apt install -y --no-install-recommends python3-pip python3-setuptools nginx zip build-essential && \
+RUN apt-get -y update && \
+    DEBIAN_FRONTEND=noninteractive apt-get -yq install --no-install-recommends python3-pip python3-setuptools nginx zip build-essential && \
     rm -rf /var/lib/apt/lists/* && \
     pip3 install --no-cache-dir jupyter
 
