Fixed Singualrity related problems

--- a/ai/RAPIDS/Dockerfile
+++ b/ai/RAPIDS/Dockerfile
@@ -1,5 +1,5 @@
 # Select Base Image 
-FROM rapidsai/rapidsai-nightly:cuda10.2-runtime-ubuntu18.04-py3.7
+FROM rapidsai/rapidsai:cuda10.1-runtime-ubuntu18.04-py3.7
 
 # Update the repo
 RUN apt-get update -y
