--- a/ai/RAPIDS/Dockerfile
+++ b/ai/RAPIDS/Dockerfile
@@ -1,5 +1,6 @@
 # Select Base Image 
-FROM rapidsai/rapidsai:cuda10.1-runtime-ubuntu18.04-py3.7
+#FROM rapidsai/rapidsai:cuda10.1-runtime-ubuntu18.04-py3.7
+FROM rapidsai/rapidsai:cuda11.0-runtime-ubuntu18.04-py3.7
 
 # Update the repo
 RUN apt-get update -y
