--- a/hpc/nways/Dockerfile
+++ b/hpc/nways/Dockerfile
@@ -34,6 +34,11 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends ns
 COPY nways_labs/ /labs/
 
 RUN python3 /labs/nways_MD/English/C/source_code/dataset.py
+RUN python3 /labs/nways_MD/English/Python/jupyter_notebook/serial/input/dataset.py
+RUN python3 /labs/nways_MD/English/Python/jupyter_notebook/numba/input/dataset.py
+RUN python3 /labs/nways_MD/English/Python/jupyter_notebook/cupy/input/dataset.py
+RUN python3 /labs/nways_MD/English/Python/source_code/serial/input/dataset.py
+
 
 #################################################
 ENV LD_LIBRARY_PATH="$LD_LIBRARY_PATH:/usr/local/lib:/opt/nvidia/hpc_sdk/Linux_x86_64/20.11/cuda/11.0/lib64/"
