Added NVIDIA copyright to Dockerfile and Singularity

--- a/ai/DeepStream_Perf_Lab/Dockerfile
+++ b/ai/DeepStream_Perf_Lab/Dockerfile
@@ -1,3 +1,5 @@
+# Copyright (c) 2020 NVIDIA Corporation.  All rights reserved.
+
 # Select Base Image
 FROM nvcr.io/nvidia/deepstream:5.0.1-20.09-triton
 
