--- a/hpc/miniprofiler/English/C/source_code/lab1/Makefile
+++ b/hpc/miniprofiler/English/C/source_code/lab1/Makefile
@@ -1,6 +1,6 @@
 # Copyright (c) 2020 NVIDIA Corporation.  All rights reserved. 
 
-CC := pgc++
+CC := nvc++
 CFLAGS := -O3 -w -ldl
 ACCFLAGS := -Minfo=accel
 NVTXLIB := -I/opt/nvidia/hpc_sdk/Linux_x86_64/20.9/cuda/11.0/include
