--- a/hpc/miniprofiler/English/Fortran/source_code/lab3/Makefile
+++ b/hpc/miniprofiler/English/Fortran/source_code/lab3/Makefile
@@ -1,6 +1,6 @@
 # Copyright (c) 2020 NVIDIA Corporation.  All rights reserved. 
-FC := pgf90
-FCC := pgfortran
+FC := nvfortran
+FCC := nvfortran
 FFLAGS := -fast
 LDFLAGS := -lnvToolsExt 
 ACCFLAGS := -ta=tesla:managed -Minfo=accel
