--- a/hpc/nways/nways_labs/nways_MD/English/Fortran/source_code/openacc/Makefile
+++ b/hpc/nways/nways_labs/nways_MD/English/Fortran/source_code/openacc/Makefile
@@ -1,12 +1,12 @@
 # Copyright (c) 2020 NVIDIA Corporation.  All rights reserved. 
 
 FC := nvfortran
-FLAGS := -O3 -w -ldl
+FLAGS := -O3 -w 
 ACCFLAGS := -Minfo=accel
-NVTXLIB := -I/opt/nvidia/hpc_sdk/Linux_x86_64/20.11/cuda/11.0/include -L/opt/nvidia/hpc_sdk/Linux_x86_64/20.11/cuda/11.0/lib64 -lnvToolsExt
+NVTXLIB := -lnvhpcwrapnvtx
 
-rdf: nvtx.f90 rdf.f90
-	${FC} ${FLAGS} ${ACCFLAGS} -o rdf nvtx.f90 rdf.f90 ${NVTXLIB} 
+rdf: rdf.f90
+	${FC} ${FLAGS} ${ACCFLAGS} -o rdf rdf.f90 ${NVTXLIB} 
 
 clean:
 	rm -f *.o rdf
