--- a/hpc/nways/nways_labs/nways_MD/English/Fortran/source_code/serial/Makefile
+++ b/hpc/nways/nways_labs/nways_MD/English/Fortran/source_code/serial/Makefile
@@ -1,11 +1,11 @@
 # Copyright (c) 2020 NVIDIA Corporation.  All rights reserved. 
 
 FC := nvfortran
-FLAGS := -O3 -w -ldl
+FLAGS := -O3 -w 
 ACCFLAGS := -Minfo=accel
-NVTXLIB := -I/opt/nvidia/hpc_sdk/Linux_x86_64/21.3/cuda/11.2/include -L/opt/nvidia/hpc_sdk/Linux_x86_64/21.3/cuda/11.2/lib64 -lnvToolsExt
+NVTXLIB := -lnvhpcwrapnvtx
 
-rdf:nvtx.f90 rdf.f90
-	${FC} ${FLAGS} ${ACCFLAGS} nvtx.f90 rdf.f90 -o rdf ${NVTXLIB} 
+rdf:rdf.f90
+	${FC} ${FLAGS} ${ACCFLAGS} rdf.f90 -o rdf ${NVTXLIB} 
 clean:
 	rm -f *.o rdf
