openacc,miniprofiler changes

--- a/hpc/miniprofiler/Dockerfile
+++ b/hpc/miniprofiler/Dockerfile
@@ -4,7 +4,7 @@
 # To run: $ sudo docker run --rm -it --gpus=all -p 8888:8888 nvidia_nsight_profiling_openacc:latest
 # Finally, open http://127.0.0.1:8888/
 
-FROM nvcr.io/nvidia/nvhpc:20.9-devel-ubuntu20.04
+FROM nvcr.io/nvidia/nvhpc:22.3-devel-cuda_multi-ubuntu20.04
 
 RUN apt-get update -y && \
     apt-get dist-upgrade -y && \
@@ -25,19 +25,6 @@ RUN pip3 install jupyterlab
 RUN pip3 install ipywidgets
 RUN pip3 install netcdf4
 
-# NVIDIA nsight-systems-2020.2.1 
-RUN apt-get update -y && \
-    DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
-    apt-transport-https \
-    ca-certificates \
-    gnupg \
-    wget && \
-    apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys F60F4B3D7FA2AF80 && \
-    echo "deb https://developer.download.nvidia.com/devtools/repo-deb/x86_64/ /" >> /etc/apt/sources.list.d/nsight.list && \
-    apt-get update -y
-
-RUN DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends nsight-systems-2020.2.1
-
 RUN apt-get install --no-install-recommends -y build-essential
 
 ENV PATH="$PATH:/usr/local/bin:/opt/anaconda3/bin:/usr/bin" 
@@ -47,8 +34,6 @@ RUN wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh &
     rm Miniconda3-latest-Linux-x86_64.sh && \
     /opt/anaconda3/bin/conda install -y -q netcdf4
 
-ENV LD_LIBRARY_PATH="$LD_LIBRARY_PATH:/usr/local/lib:/opt/nvidia/hpc_sdk/Linux_x86_64/20.9/cuda/11.0/lib64/"
-ENV PATH="/opt/nvidia/nsight-systems/2020.2.1/bin:$PATH"
 
 ADD English/ /labs
 WORKDIR /labs
