--- a/hpc/miniprofiler/English/Fortran/source_code/lab1/Makefile
+++ b/hpc/miniprofiler/English/Fortran/source_code/lab1/Makefile
@@ -2,13 +2,11 @@
 FC := nvfortran
 FCC := nvfortran
 FFLAGS := -fast
-LDFLAGS := -lnvToolsExt 
+LDFLAGS := -lnvhpcwrapnvtx 
 ACCFLAGS := -Minfo=accel
-NVTXINC := -I/opt/nvidia/hpc_sdk/Linux_x86_64/20.9/cuda/11.0/include
-NVTXLIB := -L/opt/nvidia/hpc_sdk/Linux_x86_64/20.9/cuda/11.0/lib64/
 
-miniWeather: nvtx.f90 miniWeather_serial.f90
-	$(FC) $(FFLAGS) $(ACCFLAGS) $(NVTXINC) nvtx.f90 miniWeather_serial.f90 -o miniWeather $(NVTXLIB) $(LDFLAGS)
+miniWeather:  miniWeather_serial.f90
+	$(FC) $(FFLAGS) $(ACCFLAGS) miniWeather_serial.f90 -o miniWeather $(LDFLAGS)
 
 clean:
 	rm -f *.o miniWeather
