--- a/hpc/miniprofiler/English/Fortran/source_code/lab5/Makefile
+++ b/hpc/miniprofiler/English/Fortran/source_code/lab5/Makefile
@@ -1,13 +1,11 @@
 # Copyright (c) 2020 NVIDIA Corporation.  All rights reserved. 
 FC := nvfortran
 FFLAGS := -fast
-LDFLAGS := -lnvToolsExt 
+LDFLAGS := -lnvhpcwrapnvtx
 ACCFLAGS := -ta=tesla:managed -Minfo=accel
-NVTXINC := -I/opt/nvidia/hpc_sdk/Linux_x86_64/20.9/cuda/11.0/include
-NVTXLIB := -L/opt/nvidia/hpc_sdk/Linux_x86_64/20.9/cuda/11.0/lib64/
 
-miniWeather: nvtx.f90 miniWeather_openacc.f90
-	$(FC) $(FFLAGS) $(ACCFLAGS) $(NVTXINC) nvtx.f90 miniWeather_openacc.f90 -o miniWeather $(NVTXLIB) $(LDFLAGS)
+miniWeather:  miniWeather_openacc.f90
+	$(FC) $(FFLAGS) $(ACCFLAGS)   miniWeather_openacc.f90 -o miniWeather  $(LDFLAGS)
 
 clean:
 	rm -f *.o miniWeather
